# sac-agent

./: .bumpversion.cfg  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: SPEC.md
src/sac/: __init__.py  __main__.py  agent.py  cache.py  cli.py  core.py  library.py  llm.py  models.py  py.typed  retry.py  sandbox.py  sdk.py  search.py  storage.py  utils.py  vision.py
tests/: conftest.py  test_agent_integration.py  test_cache.py  test_entry.py  test_models.py  test_retry.py  test_sac.py  test_sac_edge.py  test_utils_property.py  test_vision.py
tools/: release.sh
